2009-06-04  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* database.sql: Store revision logs and diffs as files.

2009-06-04  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* database.sql: Add support for storing files outside of 
	the database.

2009-06-03  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* database.sql: Update comment about roles.

2009-04-29  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* updatemono.sh: Added script to have a parallel mono for the
	  buildbot.

2009-04-24  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* database.sql: Add support for disabling hosts.

2009-04-24  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Makefile:
	* database.sql: Add support for deletion directives.

2009-04-23  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* database.sql: Add a dependency_host_id to lane dependencies,
	  to specify the host the lane must have succeeded on.

2009-04-21  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* database.sql: Add support for downloading dependencies to a
	  directory on the buildbot when the bot starts working on a
	  new revision.

2009-04-20  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* moonbuilder-clean-tmp.sh: Added.

2009-04-15  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* database.sql: Add some simple change tracking to steps.

2009-04-13  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* database.sql: Don't create the schema 'public' (it's already
	  created) and move RevisionWork before Work since Work
	  references RevisionWork.

2009-03-31  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* database.sql: First attempt of implementing deletion of a
	  command from a lane.

2009-03-31  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* database.sql: Added support for per-command timeout instead
	  of having a 60-minute timeout for all commands.

2009-03-23  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* postcommit-svn.sh: Added -m 15 to curl and fix a typo.

2009-02-27  Rolf Bjarne Kvinge  <RKvinge@novell.com>
